--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "^6.0.0-rc.1",
     "@angular/platform-browser-dynamic": "^6.0.0-rc.1",
     "@angular/router": "^6.0.0-rc.1",
+    "chart.js": "^2.7.2",
     "core-js": "^2.5.4",
+    "ng2-charts": "^1.6.0",
     "rxjs": "^6.0.0-rc.0",
     "zone.js": "^0.8.24"
   },
