--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "chart.js": "^2.7.2",
     "core-js": "^2.5.4",
     "ng2-charts": "^1.6.0",
+    "noty": "^3.2.0-beta",
     "rxjs": "^6.0.0-rc.0",
+    "sweetalert": "^2.1.0",
     "zone.js": "^0.8.24"
   },
   "devDependencies": {
